# tagme-ai-traces

./: .pylintrc  README.md  pyproject.toml  requirements.txt
examples/: examples_tagme_ai_traces.ipynb
requirements/: dev.txt  requirements.txt
src/tagme_ai_traces/: __init__.py  client.py  decorator.py  entities.py  tracer.py  utils.py
tests/: test_tracer.py
