[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagme_ai_traces"
version = "0.2.4"
description = "TagMe AI Traces module"
authors = [{name = "dmpresnukhin@sberbank.ru"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "pandas",
    "requests",
    "langchain-core >=0.1",
    "langchain-gigachat",
    "dacite",
    "langchain",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py39"]
include = ".*.py$"
exclude = "^$"  # handled by tooling/CI include lists

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]
known_first_party = ["src"]
combine_as_imports = true

[tool.mypy]
python_version = "3.9"
mypy_path = ["src"]
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
strict_equality = false
exclude = [
    "^dist/",
    "^build/",
    "^.venv/",
]

[tool.pylint.main]
py-version = "3.9"
jobs = 0
reports = "no"
fail-under = 10.0

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "asyncio: mark test as asyncio (requires pytest-asyncio)",
]
